--- a/品牌列表案例.html
+++ b/品牌列表案例.html
@@ -23,7 +23,7 @@
 				</label>
 				<label>
 					Name:
-					<input type="text" class="form-control" v-model="name">
+					<input type="text" class="form-control" v-model="name" @keyup.enter="add">
 				</label>
 				<label>
 				<!-- 在vue中，使用事件绑定机制，为元素指定处理函数的时候，如果加了小括号，就可以给函数传参了 -->
@@ -31,7 +31,7 @@
 				</label>
 				<label>
 					搜索名称关键字：
-					<input type="text" class="form-control" v-model="keywords">
+					<input type="text" class="form-control" v-model="keywords" id="search" v-focus v-color="'blue'">
 				</label>
 			</div>
 		</div>
@@ -51,13 +51,62 @@
 				<tr v-for="item in search(keywords)" :key="item.id">
 					<td>{{ item.id }}</td>
 					<td v-text="item.name"></td>
-					<td>{{ item.ctime }}</td>
+					<td>{{ item.ctime | dateFormat() }}</td>
 					<td><a href="" @click.prevent="del(item.id)">删除</a></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	<script>
+	//自定义一个设置字体颜色的指令
+	Vue.directive('color',{
+		//样式，只要通过执行绑定给了元素，不管这个元素有没有被插入到页面中去，这个元素肯定有了一个内联的样式，将来元素肯定会显示到页面中，这时，浏览器的渲染引擎必然会解析样式，应用给这个元素
+		bind:function(el,binding){
+			el.style.color = binding.value
+			//和样式相关的操作，一般都可以在bind执行
+		}
+	})
+
+	//定义全局指令 v-focus
+	Vue.directive('focus',{
+		bind:function(el){ //每当指令绑定到元素上时，会立即执行这个bind函数，只执行一次
+			//注意：在每个函数中，第一个参数永远是el，表示被绑定了指令的那个元素，这个el参数，是一个原生的JS对象
+			//在元素刚绑定了指令时，还没有插入到DOM中去，这时候，调用focus方法没有作用 因为，一个元素只有插入DOM之后，才能获取焦点
+			//el.focus()
+		},
+		inserted:function(el){ //inserted表示元素插入到DOM中时，会执行inserted函数【触发一次】
+			el.focus()
+			//和JS行为有关的操作，最好在inserted中去执行，放置，JS行为不生效
+		},
+		updated:function(el){ //当VNode更新时，会执行updated，可能会触发多次
+
+		}
+	})
+
+	//全局的过滤器，进行时间的格式化
+	//所谓的全局过滤器，就是所有的VM实例都共享的
+	Vue.filter('dateFormat', function(dateStr, pattern){
+		//根据给定的时间字符串，得到特定的时间
+		var dt = new Date(dateStr)
+
+		//yyyy-mm-dd
+		var y = dt.getFullYear()
+		var m = dt.getMonth() + 1
+		var d = dt.getDate()
+
+		//return y = '-' + m + '-' + d
+		//return `${y}-${m}-${d}`
+
+		if (pattern && pattern.toLower() === 'yyyy-mm-dd') {
+			return `${y}-${m}-${d}`
+		} else{
+			var hh = dt.getHours()
+			var mm = dt.getMinutes()
+			var ss = dt.getSeconds()
+			return `${y}-${m}-${d} ${hh}:${mm}:${ss}`
+		}
+	})
+
 		<!-- 3.创建vue实例，得到viewmodel -->
 		var vm = new Vue({
 			el:'#app',
